# phalanx

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
castrum/: __init__.py  cli.py  state.py
castrum/agents/: __init__.py  implementer.py  planner.py  reviewer.py  test_writer.py
castrum/audit/: __init__.py
castrum/guardrails/: __init__.py  output_validator.py  tool_gateway.py
castrum/tools/: __init__.py
docs/: ARCHITECTURE.md  GUARDRAILS.md  README.md  ROADMAP.md
phalanx/: __init__.py  cli.py  graph.py  state.py
phalanx/agents/: __init__.py  implementer.py  planner.py  reviewer.py  test_writer.py
phalanx/audit/: __init__.py  logger.py
phalanx/guardrails/: __init__.py  egress_firewall.py  input_filter.py  output_validator.py  tool_gateway.py
phalanx/tools/: __init__.py
tests/: test_cli.py  test_graph.py  test_implementer.py  test_input_filter.py  test_output_validator.py  test_planner.py  test_reviewer.py  test_smoke.py  test_test_writer.py  test_tool_gateway.py
