[project]
name = "phalanx"
version = "0.1.0"
description = "Autonomous code-modernization studio with deterministic guardrails."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "David Skowronski", email = "david@dskow.com" }
]
dependencies = [
    "langgraph>=1.2.0",
    "langchain-anthropic>=1.4.3",
    "anthropic>=0.103.1",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[project.scripts]
phalanx = "phalanx.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phalanx*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S404/S603/S607 (subprocess) are intentionally allowed only in
# phalanx.guardrails.tool_gateway; we enforce that with a
# per-file ignore rather than a blanket allow.
ignore = []

[tool.ruff.lint.per-file-ignores]
"phalanx/guardrails/tool_gateway.py" = ["S404", "S603", "S607"]
"tests/**" = ["S101", "S404", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
